Changed min width of graph to fix spacing on mobile

--- a/src/components/about/about.module.scss
+++ b/src/components/about/about.module.scss
@@ -37,7 +37,7 @@
 
 .skillsWrapper {
   margin-top: 60px;
-  min-width: 350px;
+  min-width: 270px;
   flex: 1;
 }
 
